# andrewboktor

./: ProjectHome.md  file_tree  svn-commit.2.tmp~  svn-commit.tmp
c_network/: a.out  chat.c  chat_client.c
cooking/recipes/: milk_rice
master-thesis/: Makefile  US_TitlePage.tex  abstract.tex  bachelor.kilepr  certification.tex  concepts.tex  conclusion.tex  list_of_abbreviations.tex  list_of_figures.tex  list_of_investigated_tools.tex  list_of_tables.tex  problem_description.tex  references.tex
master-thesis/illustrations/: svn-commit.tmp
sandbox/src/: main.m
thesis/final/: GUC_TitlePage.tex  Makefile  abstract.tex  (+18 more)
thesis/sandbox/src/: CMakeLists.txt  main.m
thesis/sandbox/src/adt/: list.h  list.m
thesis/sandbox/src/algorithms/: CMakeLists.txt  layout.h  layout.m  navigation.h  navigation.m  nodes.h  nodes.m  script.h  script.m  script_grammar
thesis/sandbox/src/graph/: edge.m  graph.h  graph.m  node-properties.h  node.h  node.m  point.m
thesis/sandbox/src/gtk/: button.h  combobox.m  container.h  container.m  entry.h  gtk.m  hbox.h  hbox.m  hscale.h  hseparator.h  label.h  misc.m  notebook.h  notebook.m  object.h  object.m  progress.h  progress.m  progressbar.m  range.m  scale.h  textview.h  textview.m  togglebutton.h  vbox.m  vscale.h  widget.h  widget.m  window.h  window.m
thesis/sandbox/src/ui/: app.h  general.h  general.m
trunk/sandbox/src/gtk/: CMakeLists.txt  button.m  combobox.h  drawingarea.m  gtk.h  hscale.m  hseparator.m  misc.h  progressbar.h  separator.m  vbox.h  vseparator.h  vseparator.m
xfce-themes/: clearlooks_drew  glossy_drew
(+116 files in other folders)
